kubernetes-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trip2mk
  labels:
    name: trip2mk
