kubernetes-manifests/feedback.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedback
  namespace: trip2mk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feedback
  template:
    metadata:
      labels:
        app: feedback
    spec:
      containers:
        - name: feedback
          image: darsov2/feedback
          ports:
            - containerPort: 8081
