kubernetes-manifests/main-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-app
  namespace: trip2mk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-app
  template:
    metadata:
      labels:
        app: main-app
    spec:
      containers:
        - name: main-app
          image: darsov2/main-app:kube
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
