kubernetes-manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: trip2mk
spec:
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: feedback-service
  namespace: trip2mk
spec:
  selector:
    app: feedback
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mailing-service
  namespace: trip2mk
spec:
  selector:
    app: mailing
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: main-app-service
  namespace: trip2mk
spec:
  selector:
    app: main-app
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: trip2mk
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: trip2mk
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
